--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 05:44:00 PM</p>
+    <p class="lastupdate">09/17/2020 05:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.8&#176;F</td>
+        <td class="data">82.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.8&#176;F</td>
+        <td class="data">82.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.8&#176;F</td>
+        <td class="data">82.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.7&#176;F</td>
+        <td class="data">52.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">35%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.874 inHg (-0.009)</td>
+        <td class="data">29.876 inHg (-0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SW (225&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.4&#176;F</td>
+        <td class="data">77.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 2 hours, 57 minutes</td>
+      <td class="data">16 days, 3 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 2 hours, 57 minutes</td>
+      <td class="data">16 days, 3 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
