--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 06:54:00 PM</p>
+    <p class="lastupdate">09/17/2020 06:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,7 +50,7 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.1&#176;F</td>
+        <td class="data">80.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
@@ -58,23 +58,23 @@
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.1&#176;F</td>
+        <td class="data">80.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">54.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">42%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.880 inHg (0.012)</td>
+        <td class="data">29.883 inHg (0.017)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 4 hours, 7 minutes</td>
+      <td class="data">16 days, 4 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 4 hours, 7 minutes</td>
+      <td class="data">16 days, 4 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
