--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 07:49:00 PM</p>
+    <p class="lastupdate">09/17/2020 07:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">46%</td>
+        <td class="data">47%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.897 inHg (0.018)</td>
+        <td class="data">29.896 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NE (45&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 5 hours, 2 minutes</td>
+      <td class="data">16 days, 5 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 5 hours, 2 minutes</td>
+      <td class="data">16 days, 5 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
