--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 10:14:00 PM</p>
+    <p class="lastupdate">09/17/2020 10:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">71.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">71.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">71.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.6&#176;F</td>
+        <td class="data">53.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.928 inHg (0.030)</td>
+        <td class="data">29.926 inHg (0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          203
+          204
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          195
+          196
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          206
+          207
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 7 hours, 27 minutes</td>
+      <td class="data">16 days, 7 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 7 hours, 27 minutes</td>
+      <td class="data">16 days, 7 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
