--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 11:09:00 PM</p>
+    <p class="lastupdate">09/17/2020 11:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.5&#176;F</td>
+        <td class="data">70.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.5&#176;F</td>
+        <td class="data">70.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.5&#176;F</td>
+        <td class="data">70.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.941 inHg (0.050)</td>
+        <td class="data">29.929 inHg (0.036)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNW (338&#176;)</td>
+        <td class="data">6 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.6&#176;F</td>
+        <td class="data">76.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          209
+          211
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 8 hours, 22 minutes</td>
+      <td class="data">16 days, 8 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 8 hours, 22 minutes</td>
+      <td class="data">16 days, 8 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
